# embedist

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO-fix.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release-linux.yml
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/ai-modes/: overview.md
docs/docs/ai-providers/: anthropic.md  custom-endpoints.md  deepseek.md  google.md  nvidia-nim.md  ollama.md  openai.md  overview.md
docs/docs/architecture/: ai-debugger.md  components.md  overview.md
docs/docs/development/: contributing.md  setup.md  testing.md
docs/docs/features/: board-manager.md  build-upload.md  code-editor.md  serial-monitor.md
docs/docs/getting-started/: installation.md  project-setup.md  quick-start.md
docs/docs/troubleshooting/: common-issues.md  faq.md
docs/src/css/: custom.css
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  filesystem.rs  mod.rs  platformio.rs  pty.rs  serial.rs
src/components/AI/: AIChatPanel.css  AIChatPanel.tsx  AgentActivityPanel.css  AgentActivityPanel.tsx  AgentToolbar.css  AgentToolbar.tsx  CodeBlock.css  CodeBlock.tsx  FeedbackPanel.css  FeedbackPanel.tsx  FileReferencePicker.css  FileReferencePicker.tsx  MarkdownRenderer.css  MarkdownRenderer.tsx  MessageBubble.css  MessageBubble.tsx  ModeToggle.css  ModeToggle.tsx  PlanToolbar.css  PlanToolbar.tsx  PromptSuggestions.css  PromptSuggestions.tsx  StreamingIndicator.css  StreamingIndicator.tsx  ToolCallBlock.css  ToolCallBlock.tsx
src/components/Common/: CommandPalette.css  CommandPalette.tsx  ContextMenu.css  ContextMenu.tsx  Dialog.css  Dialog.tsx  ErrorBoundary.tsx  Toast.css  Toast.tsx  ToolPermissionDialog.css  ToolPermissionDialog.tsx
src/components/Editor/: CodeEditor.css  CodeEditor.tsx  useMonacoEditor.ts
src/components/FileExplorer/: Breadcrumbs.css  Breadcrumbs.tsx  CommandPalette.css  CommandPalette.tsx  ContextMenu.css  ContextMenu.tsx  FileExplorer.css  FileExplorer.tsx  RecentFiles.css  RecentFiles.tsx
src/components/Layout/: BottomPanel.css  BottomPanel.tsx  MenuBar.css  MenuBar.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  TitleBar.css  TitleBar.tsx
src/components/Serial/: SerialMonitor.css  SerialMonitor.tsx
src/components/Settings/: SettingsModal.css  SettingsModal.tsx  SettingsSidebar.css  SettingsSidebar.tsx  SetupWizard.css  SetupWizard.tsx
src/hooks/: useAI.ts  useAIProviderSync.ts  useAgent.ts  useBuild.ts  useFileSystem.ts  useFileWatcher.ts  usePlanContext.ts  useSerial.ts
src/lib/: agent-tools.ts  ai-prompts.ts  debug-tools.ts  plan-tools.ts  rag.ts  tool-permissions.ts
src/stores/: aiStore.ts  fileStore.ts  settingsStore.ts  uiStore.ts
src/styles/: app.css  global.css
src/types/: index.ts  web-serial.d.ts
(+29 files in other folders)
