[package]
name = "embedist"
version = "0.1.0"
description = "AI-native embedded development environment"
authors = ["Embedist Team"]
edition = "2021"

[lib]
name = "embedist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-prevent-default = { version = "4", features = ["platform-windows"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
parking_lot = "0.12"
thiserror = "2"
anyhow = "1"
dirs = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
