[package]
name = "embedist"
version = "0.19.0"
description = "AI-native embedded development environment"
authors = ["Embedist Team"]
edition = "2021"

[lib]
name = "embedist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-pty = "0.2"
tauri-plugin-prevent-default = { version = "4", features = ["platform-windows"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "fs"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"
parking_lot = "0.12"
dirs = "6"
notify = "7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
